fixed horizontal scroll bar

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,9 +15,10 @@
 .hero h1 {
     position: absolute;
     width: 100%;
-    padding: 20px;
     top: 15%;
     left: 50%;
+    padding-top: 10px;
+    padding-bottom: 10px;
     transform: translate(-50%, -50%);
     background-color: rgb(255,255,255,.5);
     font-size: 50px;
@@ -25,8 +26,6 @@
 
 .hero article {
     position: absolute;
-    display: grid;
-    grid-template-columns: 80% 20%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -36,21 +35,17 @@
 }
 
 .hero article p {
-    grid-row: 1;
     text-align: left;
     padding-left: 20px;
 }
 
 .hero article img {
-    display: flex;
-    align-items: center;
+    float: right;
     padding: 20px;
-    width: 85%;
-    grid-column: 2;
+    width: 250px;
 }
 
 .hero img {
-    display: block;
     width: 100%;
     height: auto;
 }
